--- a/web/css/components/graph.css
+++ b/web/css/components/graph.css
@@ -12,6 +12,7 @@
     height: 100%;
     overflow: hidden;
     background: var(--bg-secondary);
+    padding: 2px;
 }
 
 #graph-view.fullscreen {
@@ -31,6 +32,7 @@
     width: 100%;
     height: 100%;
     display: block;
+    background: var(--bg-primary);
 }
 
 #graph-canvas.hovering:not(.dragging) {
